Add Alert Note in §2.7
In "§2.7 Permutation", add an Alert block to clarify the syntactical
differences between two very similar examples. (See #8)

--- a/docs-src/polygen-spec_EN.html
+++ b/docs-src/polygen-spec_EN.html
@@ -1094,6 +1094,19 @@ whether therefore he is
 whether he therefore is
 whether he is therefore</code></pre>
 <p>Bear in mind that a subproduction’s permutability only affects the sequence that contains it: no permutation occurs if permutable subproductions are specified in different subsequences (or subprodutions — permutable or not). See the differences in the following two examples:</p>
+<div class="Alert">
+<p><strong>BEWARE!</strong> — The two examples below might look the same at first glance, but their endings are different:</p>
+<ul>
+<li>the first example uses braces:
+<ul>
+<li><code>{&quot;I&quot; {will depart} {alone}} ;</code></li>
+</ul></li>
+<li>the other one uses parentheses:
+<ul>
+<li><code>(&quot;I&quot; {will depart} {alone}) ;</code></li>
+</ul></li>
+</ul>
+</div>
 <p><strong>EXAMPLE</strong></p>
 <pre class="hl Polygen"><code class="Polygen"><span class="hl kwa">S</span> <span class="hl opt">::= {</span>in 10 minutes<span class="hl opt">}^</span><span class="hl str">&quot;,&quot;</span> <span class="hl opt">{</span>at 3 o&#39;clock<span class="hl opt">}^</span><span class="hl str">&quot;,&quot;</span> <span class="hl opt">{</span><span class="hl str">&quot;I&quot;</span> <span class="hl opt">{</span>will depart<span class="hl opt">} {</span>alone<span class="hl opt">}} ;</span>
 </code></pre>
